# HI-obs

./: .gitignore  README.md  RadioLab.ipynb  TTRT_26KAO_WinterSchool.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: RadioLab-checkpoint.ipynb
data/: 2026-05-06T04-23-40_26.2s_gnd.csv  2026-05-06T04-24-20_163_-14_26.2s_sky.csv  2026-05-06T04-35-33_26.2s_gnd.csv  2026-05-06T04-36-21_195_12_26.2s_sky.csv  2026-05-06T04-38-34_195_14_26.2s_sky.csv  2026-05-06T04-41-57_199_9_26.2s_sky.csv  2026-05-06T04-44-06_201_6_26.2s_sky.csv  2026-05-06T04-44-59_204_-2_26.2s_sky.csv  2026-05-06T04-46-54_206_-12_26.2s_sky.csv  2026-05-06T04-48-53_207_-18_26.2s_sky.csv  2026-05-06T04-51-28_26.2s_gnd.csv  2026-05-06T04-52-53_197_-16_26.2s_sky.csv  2026-05-06T04-54-41_195_-0_26.2s_sky.csv  2026-05-06T04-55-38_194_3_26.2s_sky.csv  2026-05-06T04-57-03_193_6_26.2s_sky.csv  2026-05-06T04-58-30_192_9_26.2s_sky.csv  2026-05-06T05-00-02_26.2s_gnd.csv  2026-05-06T05-00-57_184_4_26.2s_sky.csv  2026-05-06T05-02-19_182_6_26.2s_sky.csv  2026-05-06T05-03-19_181_7_26.2s_sky.csv  2026-05-06T05-05-12_185_3_26.2s_sky.csv  2026-05-06T05-06-05_186_1_26.2s_sky.csv  2026-05-06T05-08-51_187_1_26.2s_sky.csv  2026-05-06T05-10-30_173_-5_26.2s_sky.csv  2026-05-06T05-12-12_26.2s_gnd.csv  2026-05-06T05-15-19_172_-2_26.2s_sky.csv  2026-05-06T05-17-01_172_-2_26.2s_sky.csv  2026-05-06T05-18-23_172_-1_26.2s_sky.csv  2026-05-06T05-21-29_171_0_26.2s_sky.csv  2026-05-06T05-23-27_170_1_26.2s_sky.csv  2026-05-06T05-25-28_170_1_26.2s_sky.csv  2026-05-06T05-28-22_26.2s_gnd.csv  2026-05-06T05-29-04_168_-4_26.2s_sky.csv  (+75 more)
(+82 files in other folders)
