[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "radio"
description = "Python package for radio observation using SDRs"
version = "0.2.0"
dependencies = []

[tool.setuptools]
packages = ["radio"]

[tool.setuptools.package-data]
radio = ["data/catalog/*.csv"]